[package]
name = "final_project"
version = "0.1.0"
authors = ["seanybaggins <seli2854@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduler = "0.1.3"
core_affinity = "0.5.9"
log = "0.4.8"
syslog = "5.0.0"
rscam = "0.5.5"